Update 1. 5 maj.md

--- a/Documentation/StandUp/1. 5 maj.md
+++ b/Documentation/StandUp/1. 5 maj.md
@@ -1,3 +1,9 @@
 # StandUp - 5 Maj 2020
 
-## Sektreterare XXXXXXXX
+## Secretary - Fredrik Odén (IzC87)
+
+**Sprint planning**
+
+* Completed fake sprint
+* Create an initial real sprint
+* 
