Update 1. 5 maj.md

--- a/Documentation/StandUp/1. 5 maj.md
+++ b/Documentation/StandUp/1. 5 maj.md
@@ -6,10 +6,10 @@
 2. Create an initial real sprint
 3. Populate the sprint with objects from our backlog
 
-  ..* Create all our classes
-  ..* Create data for our database
-  ..* Seed the data to database
-  ..* Create an initial GET methods to test that we're on the right track
+   * Create all our classes
+   * Create data for our database
+   * Seed the data to database
+   * Create an initial GET methods to test that we're on the right track
   
 4. Who does what?
   *
