Update 1. 5 maj.md

--- a/Documentation/StandUp/1. 5 maj.md
+++ b/Documentation/StandUp/1. 5 maj.md
@@ -12,4 +12,12 @@
    * Create an initial GET methods to test that we're on the right track
   
 4. Who does what?
-  *
+
+   * **CSV Format:** Name,Length,Weight,LatinName,Lifespan
+
+   * Murre will contribute with 5 cetaceans
+   * Micael will contribute with 5 pinnipeds
+   * Anton will contribute with 5 sea otters
+   * Fredrik will contribute with 5 sirenians
+   
+5. Start sprint
