Update 1. 6 maj.md

--- a/Documentation/StandUp/1. 6 maj.md
+++ b/Documentation/StandUp/1. 6 maj.md
@@ -2,29 +2,26 @@
 
 1. Recap
 
-* Anton completed the issue Create DB Table Mammal(MGB-33).
+   * Anton completed the issue Create DB Table Mammal(MGB-33).
 
-* Murat completed the issue Create DB Table MammalHabitat(MGB-35).
+   * Murat completed the issue Create DB Table MammalHabitat(MGB-35).
 
-* Micael completed the issue Create DB Table Habitat(MGB-32).
+   * Micael completed the issue Create DB Table Habitat(MGB-32).
 
-* Fredrik created the Create DB Table Family(MGB-34).
+   * Fredrik created the Create DB Table Family(MGB-34).
 
-We updated the database together. 
+2. We updated the database together. 
 
-The group added data and tested queries together in management studio.
+3. The group added data and tested queries together in management studio.
 
-We tried git out together, made branches for individual issues and tried pull requests. 
+4. We tried git out together, made branches for individual issues and tried pull requests. 
 
-2. Until next time
+5. Since we added data manually to the database we made a backup of the "clean" database just in case.
 
-* Code the first GET-method together. 
+6. Until next time
 
-* Clean up the current sprint from outdated issues. 
+   * Code the first GET-method together. 
 
-* Micael & Fredrik creates backup for the database. 
+   * Clean up the current sprint from outdated issues. 
 
-
-
-
-
+   * Micael & Fredrik creates backup for the database. 
