Update 1. 6 maj.md

--- a/Documentation/StandUp/1. 6 maj.md
+++ b/Documentation/StandUp/1. 6 maj.md
@@ -16,7 +16,7 @@
 
 4. We tried git out together, made branches for individual issues and tried pull requests. 
 
-5. Since we added data manually to the database we made a backup of the "clean" database just in case.
+5. Since we added data manually to the database we made a backup of the freshly populated database just in case.
 
 6. Until next time
 
