Update 0. Sprint & StandUp Plan.md

--- a/Documentation/StandUp/0. Sprint & StandUp Plan.md
+++ b/Documentation/StandUp/0. Sprint & StandUp Plan.md
@@ -22,3 +22,14 @@
 * Varje person
    * Vad har jag gjort sen vår förra standup
    * Vad jag skall göra tills nästa standup
+
+**Dagordning Sprint Review**
+ * Val av sekreterare
+ * Blev alla issues klara?
+ * Om inte, varför
+ * Icke klara issues återförs till backlog, efter att de har uppdaterats. Har vissa
+delar klarats av? Skall vi ha en ny tidsuppskattning? Vad behövs för att vi
+skall klara detta issue nästa gång?
+ * Höll eran tidsplanering för era issues.
+ * Bedöm vad ni kan göra bättre i nästa sprint
+ * Har det kommit upp nya saker som skall läggas till på er backlog?
