Update 5. 12 maj.md

--- a/Documentation/StandUp/5. 12 maj.md
+++ b/Documentation/StandUp/5. 12 maj.md
@@ -31,5 +31,5 @@
 **Things to do until next standup**
  * Re-fill the backlog
  * Add our base Repository with CRUD
- * Fix the bug with GetHabitatById - MGB-91
+ * Fix the bug with GetHabitatById - MGB-91 - Nevermind we're **stupid**
  * Add ze logger to our methods
