--- a/Documentation/StandUp/7. 15 maj.md
+++ b/Documentation/StandUp/7. 15 maj.md
@@ -2,31 +2,31 @@
 ** What we made since last standup **
 
 * Anton
-MGB-112 Errorhandling for FamilyController
-MGB-115 DataAnnotations for FamilyModel
-MGB-122 Added a few tests for FamilyRepository
-MGB-97 Added UnitTest for GetHabitatById
+- MGB-112 Errorhandling for FamilyController
+- MGB-115 DataAnnotations for FamilyModel
+- MGB-122 Added a few tests for FamilyRepository
+- MGB-97 Added UnitTest for GetHabitatById
 
 * Micael
-MGB-121 Add Test methods for FamilyController,
-MGB-120 GetHabitatById to DTO,
-MGB-90 Add GetMammalByLifespan add range, update to DTO
+- MGB-121 Add Test methods for FamilyController,
+- MGB-120 GetHabitatById to DTO,
+- MGB-90 Add GetMammalByLifespan add range, update to DTO
 
 * Murre
-MGB-117-DataAnnotations
-MGB-116-DataAnnotations
-MGB-114-ErrorHandlingMammalController
-MGB-118-TestGetByIdMammalRepo
+- MGB-117-DataAnnotations
+- MGB-116-DataAnnotations
+- MGB-114-ErrorHandlingMammalController
+- MGB-118-TestGetByIdMammalRepo
 
 * Fredrik
-MGB-119-Uppdate-GetMammalById-to-DTO
-MGB-124-TestsHabitatRepository
-MGB-113-ErrorHandlingHabitatController
+- MGB-119-Uppdate-GetMammalById-to-DTO
+- MGB-124-TestsHabitatRepository
+- MGB-113-ErrorHandlingHabitatController
 
 **Things to do until next standup**
 
-* N/A
+- N/A
 
 ** Decisions **
 
-* Anton and Fredrik are going to leave Group B
+- Anton and Fredrik are going to leave Group B
