Update 8. 18 maj.md

--- a/Documentation/StandUp/8. 18 maj.md
+++ b/Documentation/StandUp/8. 18 maj.md
@@ -25,3 +25,29 @@ Database walktrough done.
 - Add more backlog items.
 - Start new sprint and assign issues
 - Assign issues among team members.
+
+- Samir
+
+  - MGB-138 Test POST method in familyController
+
+  - MGB-123 Test - HabitatController - Add tests for methods
+
+  - MGB-133 Create HttpPost in FamilyController
+
+- Ted
+
+  - MGB-131 Create HttpPost in MammalController
+  - MGB-137 Test POST method in habitatController
+  - MGB-130 Create Automapper functionality
+
+* Murat
+  * MGB-136 Test POST method in mammalController
+  * MGB-132 Create HttpPost in HabitatController
+  * MGB-126 Test - Repository - Add tests for methods
+  * MGB-125 Test - MammalController - Add tests for methods
+
+* Micael
+  * MGB-135 Plan calls to put links into
+  * MGB-134 Reasearch links on Hateoas/other sources
+  * MGB-119 Update GetMammalById to return the correct DTO
+  * MGB-96 Test MammalRepository GetAll
