Update 9. 20 maj.md

--- a/Documentation/StandUp/9. 20 maj.md
+++ b/Documentation/StandUp/9. 20 maj.md
@@ -1,53 +1,40 @@
-## StandUp - 18 Maj 2020 Secretary - Micael Wollter (aohzork)
+## StandUp - 20 Maj 2020 Secretary - Ted Henriksson (singelmamma)
 ** What we made since last standup **
 
 * Samir
+- MGB-138  Test POST method in familyController
+- MGB-125-MammalControllerTest started
 * Micael
+- MGB-134 Research Links on HATEOAS
+- MGB-96 Test MammalRepository GetAll
+- MGB-119 Update GetMammalById to return the correct DTO
 * Murre
+- MGB-126-RepositoryTests started
 * Ted
+- MGB-130 Create Automapper functionality
 
-** Onboarding introduction **
+** Changes from last standup **
 
-Have introduced our project for our two new members.
-
-Github access done.
-
-Jira access done.
-
-Project is working on new members computers
-
-Database access given.
-
-Database walktrough done.
+- Reassigned issue mgb-125 from Murat to Samir
 
 **Things to do until next standup**
 
 - Add more backlog items.
-- Start new sprint and assign issues
-- Assign issues among team members.
 
 - Samir
 
-  - MGB-138 Test POST method in familyController
+- MGB-138  Test POST method in familyController
+- MGB-125-MammalControllerTest started
 
-  - MGB-123 Test - HabitatController - Add tests for methods
-
-  - MGB-133 Create HttpPost in FamilyController
 
 - Ted
 
+  - MGB-139 Create Get method for families and include mammals
   - MGB-131 Create HttpPost in MammalController
-  - MGB-137 Test POST method in habitatController
-  - MGB-130 Create Automapper functionality
 
 * Murat
-  * MGB-136 Test POST method in mammalController
   * MGB-132 Create HttpPost in HabitatController
-  * MGB-126 Test - Repository - Add tests for methods
-  * MGB-125 Test - MammalController - Add tests for methods
+
 
 * Micael
-  * MGB-135 Plan calls to put links into
-  * MGB-134 Reasearch links on Hateoas/other sources
-  * MGB-119 Update GetMammalById to return the correct DTO
-  * MGB-96 Test MammalRepository GetAll
+  * MGB-135 Proof-of-concept HATEOAS
