--- a/Documentation/StandUp/9. 20 maj.md
+++ b/Documentation/StandUp/9. 20 maj.md
@@ -4,6 +4,16 @@
 * Samir
 - MGB-138  Test POST method in familyController
 - MGB-125-MammalControllerTest started
+- MGB-138  Test POST method in familyController
+- MGB-125-MammalControllerTest started
+- MGB- 149- added automapper in FamilyController GetFamilyByName()
+- MGB- 150- added automapper in FamilyController GetFamilyById()
+- MGB- 151- added automapper in HabitatController HTTPGet()
+- MGB- 152- added automapper in HabitatController GetHabitatByID()
+- MGB- 152- added automapper in HabitatController GetHabitatByName()
+- MGB- 159- added automapper in MammalController GetHabitatByLifeSpan()
+- MGB- 160- added automapper in MammalController GetHabitatByFamilyName()
+- MGB- 162- added automapper in MammalController GetHabitatByFamilyID()
 * Micael
 - MGB-134 Research Links on HATEOAS
 - MGB-96 Test MammalRepository GetAll
