--- a/Documentation/StandUp/11. 25 maj.md
+++ b/Documentation/StandUp/11. 25 maj.md
@@ -1,34 +1,44 @@
-## StandUp - 20 Maj 2020 Secretary Samir Ehsani (samirehsani)
+## StandUp - 25 Maj 2020 Secretary Ted Henriksson (singelmamma)
 ** What we made since last standup **
+Introudce the project for our new memebers Mirko and Hampus, discussed which new issues need to be implemented to the new sprint.
 
 * **Samir**
-* MGB-138  Test POST method in familyController
-* MGB-125-MammalControllerTest started
-* MGB- 149- added automapper in FamilyController GetFamilyByName()
-* MGB- 150- added automapper in FamilyController GetFamilyById()
-* MGB- 151- added automapper in HabitatController HTTPGet()
-* MGB- 152- added automapper in HabitatController GetHabitatByID()
-* MGB- 152- added automapper in HabitatController GetHabitatByName()
-* MGB- 159- added automapper in MammalController GetHabitatByLifeSpan()
-* MGB- 160- added automapper in MammalController GetHabitatByFamilyName()
-* MGB- 162- added automapper in MammalController GetHabitatByFamilyID()
+
+* MGB-173
+HabitatRepository: Clean up GetAllHabitats call
+* MGB-174
+HabitatRepository: Clean up GetHabitatByName call
+* MGB-175
+HabitatRepository: Clean up GetHabitatById
 
 
 
-* **Micael**
+* **Hampus**
 
-* MGB-135 Proof-of-concept HATEOAS
+* MGB-171
+FamilyRepo: Clean up GetFamilyByName call
+* MGB-172
+FamilyRepo: Clean up GetFamilyById call
 
   
 
-* **Murre**
-* MGB-132 Create HttpPost in HabitatController
+* **Mirko**
+
+* MGB-176
+MammalRepository: Clean up GetMammalsByHabitat call
+* MGB-177
+MammalRepository: Clean up GetMammalsByHabitatID call
+* MGB-178
+MammalRepository: Clean up GetMammalsByLifeSpan call
 
 
 
 * **Ted**
-* - MGB-139 Create Get method for families and include mammals
-  - MGB-131 Create HttpPost in MammalController
+
+* MGB-179
+MammalRepository: Clean up GetMammalsByFamily call
+* MGB-180
+MammalRepository: Clean up GetMammalsByFamilyID
 
 
 
@@ -38,6 +48,5 @@
 
 **Things to do until next standup**
 
-- Add more backlog items.
-
-All members are working on reviewing pull request and cleaning up white space and commented codes and testing the CRUD operation. We are also going to close our sprint today.
+- Do all the clean up issues
+- During our work all memebers need to read the code and come up with new issues that needs to be implement. 
