Update 11. 26 maj.md

--- a/Documentation/StandUp/11. 26 maj.md
+++ b/Documentation/StandUp/11. 26 maj.md
@@ -28,6 +28,7 @@ Fixed some issues where calling controllers didn't work satisfactory.
 * Today:
 
   * MGB-187 - Create Delete Family
+  * No more issues in sprint, will help others if needed when finished.
 
   
 
