--- a/Documentation/StandUp/13. 27 maj.md
+++ b/Documentation/StandUp/13. 27 maj.md
@@ -1,4 +1,4 @@
-# Standup - 27 Maj 2020 Secretary Mirko Pralica
+# First Standup - 27 Maj 2020 Secretary Mirko Pralica
 
 ** What we made since last standup **
 We started reading about HATEOAS, and thought how to implement it.
@@ -54,3 +54,45 @@ What will we do today
   * Have to read about Swagger
   * Implement Swagger in the project
   * Create Documentation about the API
+
+# Second Standup - 27 Maj 2020 Secretary Mirko Pralica
+
+* **Samir**
+* Today:
+  * MGB-196 (Implement include tables : GetHabitatByName)
+  * MGB-197 (Implement include tables: GetHabitatById)
+  * MGB-211 (Review routing convention on: GetAllHabitas)
+
+
+
+* **Hampus**
+
+* Today:
+
+  * MGB-191(Review routing convention on : Get FamilyByName)
+  * MGB-192 (Review routing convention on: GetFamilyById)
+  * MGB-193 (Review routing convention on: GetAllFamilies)
+  * MGB-194 (Implement include tables: GetFamiliesByName)
+  * MGB-195 (Implement include tables: GetFamilyById)
+
+  
+
+* **Mirko**
+
+* Yesterday:
+
+  * MGB-215 (Review routing convention on : Get GetMammalsByHabitatID)
+  * MGB-216 (Review routing convention on : Get GetMammalsByLifeSpan)
+  * MGB-202 (Implement include tables : GetMammalByHabitatId)
+
+
+
+* **Ted**
+* Yesterday:
+  * MGB-212 (Review routing convention on : Get GetAllMammals)
+  * MGB-213 (Review routing convention on : Get GetMammalByID)
+  * MGB-214 (Review routing convention on : Get GetMammalsByHabitat)
+
+
+
+What will we do today
