Update 14. 28 maj.md

--- a/Documentation/StandUp/14. 28 maj.md
+++ b/Documentation/StandUp/14. 28 maj.md
@@ -10,6 +10,7 @@ We try to implement get request with include for our methods. We also did some r
   * MGB-197 GetHabitatByID include Mammal
   
   * MGB-222 GetHabitatByID include Mammal
+  * MGB-198 GetallHabitat include Mammal
   
     
 
