--- a/Documentation/StandUp/14. 28 maj.md
+++ b/Documentation/StandUp/14. 28 maj.md
@@ -11,6 +11,7 @@ We try to implement get request with include for our methods. We also did some r
   
   * MGB-222 GetHabitatByID include Mammal
   * MGB-198 GetallHabitat include Mammal
+  * MGB-211 Review routing convention on: GetAllHabitats
   
     
 
