--- a/Documentation/StandUp/14. 28 maj.md
+++ b/Documentation/StandUp/14. 28 maj.md
@@ -8,10 +8,11 @@ We try to implement get request with include for our methods. We also did some r
 * **Samir**
 * Today:
   * MGB-197 GetHabitatByID include Mammal
-  
   * MGB-222 GetHabitatByID include Mammal
   * MGB-198 GetallHabitat include Mammal
   * MGB-211 Review routing convention on: GetAllHabitats
+  * MGB-209 Review routing convention on: GetHabitatByID
+  * MGB-208 Review routing convention on: GetHabitatByName
   
     
 
