@MirkoPralica Added my Issues for today

--- a/Documentation/StandUp/14. 28 maj.md
+++ b/Documentation/StandUp/14. 28 maj.md
@@ -6,6 +6,7 @@ We try to implement get request with include for our methods. We also did some r
 
 
 * **Samir**
+
 * Today:
   * MGB-197 GetHabitatByID include Mammal
   * MGB-222 GetHabitatByID include Mammal
@@ -31,8 +32,14 @@ We try to implement get request with include for our methods. We also did some r
 
 * Yesterday:
 
-  * coming in afternoon and continue with the issues from yesterday
-    
+  * MGB-215 (Review routing convention on : Get GetMammalsByHabitatID)-- Finished
+  * MGB-216 (Review routing convention on : Get GetMammalsByLifeSpan)-- Finished
+  * MGB-202 (Implement include tables : GetMammalByHabitatId)-- Finished
+  
+* Today
+
+  * MGB-204 (Implement include tables : GetMammalByHabitatName)
+  * MGB-201 (Implement include tables : GetMammalByName)
 
 
 
