Update 14. 29 maj.md

--- a/Documentation/StandUp/14. 29 maj.md
+++ b/Documentation/StandUp/14. 29 maj.md
@@ -1,4 +1,4 @@
-# Standup - 28 Maj 2020 Secretary Samir Ehsani
+# Standup - 28 Maj 2020 Secretary Hampus Kjellstrand
 
 ** What we did since last standup **
 We continued working with getting includes to work with the join table. In the end we got it to work but it took a while. We also found a way to stop the recursion where we wanted it when including information from other tables.
