--- a/Documentation/StandUp/15. 1 juni.md
+++ b/Documentation/StandUp/15. 1 juni.md
@@ -1,79 +1,57 @@
-# Standup - 28 Maj 2020 Secretary Samir Ehsani
+# Standup - 28 Maj 2020 Ted Henriksson
 
 ** What we did since last standup **
-We continued working with getting includes to work with the join table. In the end we got it to work but it took a while. We also found a way to stop the recursion where we wanted it when including information from other tables.
+We have finished all include calls for the get-methods, we all went through the code and cleaned up all unused code.
 
 
 
 * **Samir**
 
-  * Needs to be absent for today, which has been communicated with the group.
-  * Might come in later and pick up some issues.
-
-  
+* Today:
+   * MGB-225
 
 * **Hampus**
 
-* Yesterday:
-
-  * MGB-217  Improving routing -- Finished
-  * MGB-218  improving  routing -- Finished
-  * MGB- 205 Implement include tables: GetMammalByFamilyName get request -- Finished
-  * MGB-206  Implement include tables: GetMammalByFamilyID get request -- Finished
+* Last friday:
+    * MGB-154 - finished
+    * MGB-158 - finished
+    * MGB-161 - finished
+    * MGB-163 - finished
+    * MGB-164 - finished
+    * MGB-165 - finished
 
 * Today:
-
-  * Will try to get as many test modification issues done as possible
-    * MGB-154
-    * MGB-158
-    * MGB-161
-    * MGB-163
-    * MGB-164
-    * MGB-165
-
-  
+    
+    * MGB - 226
+    * MGB - 229
 
 * **Mirko**
 
-* Yesterday:
+* Last friday:
 
-  * MGB-204 (Implement include tables : GetMammalByHabitatName) -- Almost Finished
-    * Needs to rework a little bit of stuff but essentially done
-  * MGB-201 (Implement include tables : GetMammalByName) -- Almost Finished
-    * Needs to rework a little bit of stuff but essentially done
-  * MGB-202 (Implement include tables: GetMammalByHabitatID Get request) -- Finished
-    * Just need to rename some stuff
-  * MGB-223 (MGB-224) (Implement Include GetMammalByName : Get Request) -- Finished
-    * Just need to rename some stuff
+  * MGB-204 (Implement include tables : GetMammalByHabitatName) -Finished
+  * MGB-201 (Implement include tables : GetMammalByName) -Finished
+  * MGB-202 (Implement include tables: GetMammalByHabitatID Get request) - Finished
+  * MGB-223 (MGB-224) (Implement Include GetMammalByName : Get Request) - Finished
+  - MGB-210 (Code Clean-up)
 
 * Today
-
-  - MGB-210 (Code Clean-up)
-  - If gets done, will do some Repositroy test modification issues.
-
-
+  * MGB-227
 
 * **Ted**
 
 * Yesterday:
 
-  * MGB-199 Implement include tables: GetAllMammals Get request  -- almost done
+  * MGB-199 Implement include tables: GetAllMammals Get request  - finished
+  * MGB- 213 Review routing convention on: GetMammalByID - finished
+  * MGB-214 Review routing convention on: GetGetMammalsByHabitat - finished
+  * MGB-200 Implement include tables: GetMammalByID Get request - finished
+ * MGB-203 Implement include tables: GetMammalByHabitatName Get request - finished
 
 * Today:
-  
-  * MGB-199 Implement include tables: GetAllMammals Get request
-    
-  * MGB- 213 Review routing convention on: GetMammalByID
-  
-  * MGB-214 Review routing convention on: GetGetMammalsByHabitat
-  
-  * MGB-200 Implement include tables: GetMammalByID Get request
-  
-  * MGB-203 Implement include tables: GetMammalByHabitatName Get request
-  
-    
+ * MGB-228
+ * MGB-
 
 What will we do today
 
-* All will be available for when clean-up is done, to supply needed input.
-* Do pull requests
+* We need to implement a new apikey-filter function to the api so we need to creature more issues to the backlog.
