Update 15. 1 juni.md

--- a/Documentation/StandUp/15. 1 juni.md
+++ b/Documentation/StandUp/15. 1 juni.md
@@ -10,6 +10,8 @@ We have finished all include calls for the get-methods, we all went through the 
 * Today:
    * MGB-225
    * Trying to do ControllerTest for FamilyController
+   * MGB 233
+   * MGB 234
 
 * **Hampus**
 
